--- a/lhy-test.ini
+++ b/lhy-test.ini
@@ -22,11 +22,11 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;策略组定义
 
-custom_proxy_group=🚀 节点选择`select`[]🔯 Trojan-香港1 | 低倍率`[]🔯 Trojan-新加坡1 | 低倍率`[]🔯 Trojan-日本1 | 低倍率`[]🔯 Trojan-美国1 | 低倍率`[]Trojan-台湾1 | 低倍率`[]Trojan-加拿大1 | 低倍率`[]Trojan-香港2 | 低倍率`[]Trojan-新加坡2 | 低倍率`[]Trojan-日本2 | 低倍率`[]Trojan-美国2 | 低倍率`[]Trojan-台湾2 | 低倍率`[]Trojan-加拿大2 | 低倍率`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 Trojan-新加坡1 | 低倍率`[]🔯 Trojan-日本1 | 低倍率`[]🔯 Trojan-美国1 | 低倍率`[]Trojan-台湾1 | 低倍率`[]Trojan-加拿大1 | 低倍率`[]Trojan-新加坡2 | 低倍率`[]Trojan-日本2 | 低倍率`[]Trojan-美国2 | 低倍率`[]Trojan-台湾2 | 低倍率`[]Trojan-加拿大2 | 低倍率`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🔯 Trojan-新加坡1 | 低倍率`[]🔯 Trojan-日本1 | 低倍率`[]🔯 Trojan-美国1 | 低倍率`[]Trojan-台湾1 | 低倍率`[]Trojan-加拿大1 | 低倍率`[]Trojan-新加坡2 | 低倍率`[]Trojan-日本2 | 低倍率`[]Trojan-美国2 | 低倍率`[]Trojan-台湾2 | 低倍率`[]Trojan-加拿大2 | 低倍率`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
+custom_proxy_group=🚀 节点选择`select`[]🔯 Trojan-香港1 | 低倍率`[]🔯 Trojan-新加坡1 | 低倍率`[]🔯 Trojan-日本1 | 低倍率`[]🔯 Trojan-美国1 | 低倍率`[]Trojan-台湾1 | 低倍率`[]Trojan-加拿大1 | 低倍率`[]Trojan-香港2 | 低倍率`[]Trojan-新加坡2 | 低倍率`[]Trojan-日本2 | 低倍率`[]Trojan-美国2 | 低倍率`[]Trojan-台湾2 | 低倍率`[]Trojan-加拿大2 | 低倍率`[]🐸 手动切换
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 Trojan-新加坡1 | 低倍率`[]🔯 Trojan-日本1 | 低倍率`[]🔯 Trojan-美国1 | 低倍率`[]Trojan-台湾1 | 低倍率`[]Trojan-加拿大1 | 低倍率`[]Trojan-新加坡2 | 低倍率`[]Trojan-日本2 | 低倍率`[]Trojan-美国2 | 低倍率`[]Trojan-台湾2 | 低倍率`[]Trojan-加拿大2 | 低倍率`[]🐸 手动切换
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🔯 Trojan-新加坡1 | 低倍率`[]🔯 Trojan-日本1 | 低倍率`[]🔯 Trojan-美国1 | 低倍率`[]Trojan-台湾1 | 低倍率`[]Trojan-加拿大1 | 低倍率`[]Trojan-新加坡2 | 低倍率`[]Trojan-日本2 | 低倍率`[]Trojan-美国2 | 低倍率`[]Trojan-台湾2 | 低倍率`[]Trojan-加拿大2 | 低倍率`[]🐸 手动切换
+custom_proxy_group=🎯 全球直连`select`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT
 
 ;启用自定义规则集
 
